--- a/testDrawSketch/Base.lproj/MainMenu.xib
+++ b/testDrawSketch/Base.lproj/MainMenu.xib
@@ -725,9 +725,9 @@
                         </connections>
                     </button>
                     <scrollView fixedFrame="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Ld-fz-4Dg">
-                        <rect key="frame" x="203" y="20" width="577" height="96"/>
+                        <rect key="frame" x="203" y="20" width="545" height="96"/>
                         <clipView key="contentView" ambiguous="YES" id="Vam-US-8Su">
-                            <rect key="frame" x="1" y="1" width="575" height="94"/>
+                            <rect key="frame" x="1" y="1" width="543" height="94"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <view fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2fm-qJ-Rvz" customClass="scrollBrowserView">
@@ -740,11 +740,11 @@
                             </subviews>
                         </clipView>
                         <scroller key="horizontalScroller" verticalHuggingPriority="750" horizontal="YES" id="NCM-98-jyw">
-                            <rect key="frame" x="1" y="79" width="575" height="16"/>
+                            <rect key="frame" x="1" y="79" width="543" height="16"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                         <scroller key="verticalScroller" verticalHuggingPriority="750" horizontal="NO" id="5Yx-ol-a3t">
-                            <rect key="frame" x="561" y="1" width="15" height="94"/>
+                            <rect key="frame" x="528" y="1" width="16" height="94"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                     </scrollView>
@@ -764,7 +764,7 @@
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                         <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="54T-Kb-gPs">
-                            <rect key="frame" x="167" y="1" width="15" height="393"/>
+                            <rect key="frame" x="166" y="1" width="16" height="393"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                     </scrollView>
@@ -807,6 +807,16 @@
                     <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="71C-Kq-chf" customClass="resultimageview">
                         <rect key="frame" x="11" y="20" width="163" height="96"/>
                     </customView>
+                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9Z8-wn-tgc">
+                        <rect key="frame" x="756" y="20" width="31" height="96"/>
+                        <buttonCell key="cell" type="bevel" title="&gt;" bezelStyle="rounded" alignment="center" imageScaling="proportionallyDown" inset="2" id="D3G-Uz-xxl">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="system"/>
+                        </buttonCell>
+                        <connections>
+                            <action selector="extend:" target="Voe-Tx-rLC" id="Frx-g9-3dI"/>
+                        </connections>
+                    </button>
                 </subviews>
             </view>
         </window>
