--- a/testDrawSketch/Base.lproj/MainMenu.xib
+++ b/testDrawSketch/Base.lproj/MainMenu.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="10117"/>
@@ -678,7 +678,7 @@
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="335" y="390" width="800" height="600"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1280" height="777"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1366" height="745"/>
             <value key="minSize" type="size" width="800" height="600"/>
             <value key="maxSize" type="size" width="800" height="600"/>
             <view key="contentView" id="EiT-Mj-1SZ">
@@ -728,11 +728,11 @@
                     <scrollView fixedFrame="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Ld-fz-4Dg">
                         <rect key="frame" x="203" y="20" width="545" height="96"/>
                         <clipView key="contentView" ambiguous="YES" id="Vam-US-8Su">
-                            <rect key="frame" x="1" y="1" width="528" height="79"/>
+                            <rect key="frame" x="1" y="1" width="543" height="94"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <view fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2fm-qJ-Rvz" customClass="scrollBrowserView">
-                                    <rect key="frame" x="0.0" y="-15" width="181" height="94"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="181" height="94"/>
                                     <connections>
                                         <outlet property="_dataSource" destination="mPe-fk-axe" id="fdK-NW-OMu"/>
                                         <outlet property="_delegate" destination="mPe-fk-axe" id="GLJ-ua-hXH"/>
@@ -741,31 +741,31 @@
                             </subviews>
                         </clipView>
                         <scroller key="horizontalScroller" verticalHuggingPriority="750" horizontal="YES" id="NCM-98-jyw">
-                            <rect key="frame" x="1" y="80" width="528" height="15"/>
+                            <rect key="frame" x="1" y="79" width="543" height="16"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                         <scroller key="verticalScroller" verticalHuggingPriority="750" horizontal="NO" id="5Yx-ol-a3t">
-                            <rect key="frame" x="529" y="1" width="15" height="79"/>
+                            <rect key="frame" x="528" y="1" width="16" height="94"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                     </scrollView>
                     <scrollView fixedFrame="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xo5-o9-zgm">
                         <rect key="frame" x="11" y="124" width="183" height="395"/>
                         <clipView key="contentView" ambiguous="YES" id="u1y-WB-hFG">
-                            <rect key="frame" x="1" y="1" width="166" height="378"/>
+                            <rect key="frame" x="1" y="1" width="181" height="393"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <view fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pw0-Ge-geR">
-                                    <rect key="frame" x="0.0" y="284" width="181" height="94"/>
+                                    <rect key="frame" x="0.0" y="299" width="181" height="94"/>
                                 </view>
                             </subviews>
                         </clipView>
                         <scroller key="horizontalScroller" verticalHuggingPriority="750" horizontal="YES" id="dTA-wu-JWA">
-                            <rect key="frame" x="1" y="379" width="166" height="15"/>
+                            <rect key="frame" x="1" y="378" width="181" height="16"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                         <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="54T-Kb-gPs">
-                            <rect key="frame" x="167" y="1" width="15" height="378"/>
+                            <rect key="frame" x="166" y="1" width="16" height="393"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                     </scrollView>
@@ -816,6 +816,26 @@
                         </buttonCell>
                         <connections>
                             <action selector="extend:" target="Voe-Tx-rLC" id="Frx-g9-3dI"/>
+                        </connections>
+                    </button>
+                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="axp-tL-T6x">
+                        <rect key="frame" x="613" y="560" width="89" height="32"/>
+                        <buttonCell key="cell" type="push" title="position" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="9Z6-Rf-Dhl">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="system"/>
+                        </buttonCell>
+                        <connections>
+                            <action selector="showindex:" target="Voe-Tx-rLC" id="9bh-Aa-Ve6"/>
+                        </connections>
+                    </button>
+                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="baS-Sw-CX7">
+                        <rect key="frame" x="700" y="560" width="73" height="32"/>
+                        <buttonCell key="cell" type="push" title="scroll" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Cm0-rP-Qyv">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="system"/>
+                        </buttonCell>
+                        <connections>
+                            <action selector="scrollposition:" target="Voe-Tx-rLC" id="bra-MX-H9I"/>
                         </connections>
                     </button>
                 </subviews>
