--- a/testDrawSketch/Base.lproj/MainMenu.xib
+++ b/testDrawSketch/Base.lproj/MainMenu.xib
@@ -14,6 +14,7 @@
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customObject id="Voe-Tx-rLC" customClass="AppDelegate">
             <connections>
+                <outlet property="bigsizeimage" destination="fl5-Nd-TA1" id="IPz-Ai-vup"/>
                 <outlet property="dSC" destination="rLz-3s-Ftd" id="mY2-6u-Od7"/>
                 <outlet property="extendbutton" destination="9Z8-wn-tgc" id="Wis-hV-G4H"/>
                 <outlet property="imageT" destination="9Ld-fz-4Dg" id="LzC-GY-nfd"/>
@@ -741,7 +742,7 @@
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                         <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="54T-Kb-gPs">
-                            <rect key="frame" x="166" y="1" width="16" height="393"/>
+                            <rect key="frame" x="167" y="1" width="15" height="393"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                     </scrollView>
@@ -805,8 +806,8 @@
                         </connections>
                     </button>
                     <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="baS-Sw-CX7">
-                        <rect key="frame" x="700" y="560" width="73" height="32"/>
-                        <buttonCell key="cell" type="push" title="scroll" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Cm0-rP-Qyv">
+                        <rect key="frame" x="696" y="560" width="82" height="32"/>
+                        <buttonCell key="cell" type="push" title="hidden" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Cm0-rP-Qyv">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
                         </buttonCell>
@@ -834,12 +835,19 @@
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                         <scroller key="verticalScroller" verticalHuggingPriority="750" horizontal="NO" id="5Yx-ol-a3t">
-                            <rect key="frame" x="528" y="1" width="16" height="94"/>
+                            <rect key="frame" x="529" y="1" width="15" height="94"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                     </scrollView>
+                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fl5-Nd-TA1">
+                        <rect key="frame" x="339" y="246" width="187" height="242"/>
+                        <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="green" id="edy-vA-rtq"/>
+                    </imageView>
                 </subviews>
             </view>
         </window>
     </objects>
+    <resources>
+        <image name="green" width="64" height="64"/>
+    </resources>
 </document>
