--- a/testDrawSketch/Base.lproj/MainMenu.xib
+++ b/testDrawSketch/Base.lproj/MainMenu.xib
@@ -742,7 +742,7 @@
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                         <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="54T-Kb-gPs">
-                            <rect key="frame" x="166" y="1" width="16" height="393"/>
+                            <rect key="frame" x="167" y="1" width="15" height="393"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                     </scrollView>
@@ -806,8 +806,8 @@
                         </connections>
                     </button>
                     <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="baS-Sw-CX7">
-                        <rect key="frame" x="696" y="560" width="82" height="32"/>
-                        <buttonCell key="cell" type="push" title="hidden" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Cm0-rP-Qyv">
+                        <rect key="frame" x="687" y="560" width="100" height="32"/>
+                        <buttonCell key="cell" type="push" title="showmatt" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Cm0-rP-Qyv">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
                         </buttonCell>
@@ -835,7 +835,7 @@
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                         <scroller key="verticalScroller" verticalHuggingPriority="750" horizontal="NO" id="5Yx-ol-a3t">
-                            <rect key="frame" x="528" y="1" width="16" height="94"/>
+                            <rect key="frame" x="529" y="1" width="15" height="94"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                     </scrollView>
