--- a/testDrawSketch/Base.lproj/MainMenu.xib
+++ b/testDrawSketch/Base.lproj/MainMenu.xib
@@ -14,7 +14,7 @@
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customObject id="Voe-Tx-rLC" customClass="AppDelegate">
             <connections>
-                <outlet property="bigsizeimage" destination="fl5-Nd-TA1" id="IPz-Ai-vup"/>
+                <outlet property="bigsizeimage" destination="f4q-rA-fbF" id="n76-zt-fOV"/>
                 <outlet property="dSC" destination="rLz-3s-Ftd" id="mY2-6u-Od7"/>
                 <outlet property="extendbutton" destination="9Z8-wn-tgc" id="Wis-hV-G4H"/>
                 <outlet property="imageT" destination="9Ld-fz-4Dg" id="LzC-GY-nfd"/>
@@ -742,7 +742,7 @@
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                         <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="54T-Kb-gPs">
-                            <rect key="frame" x="167" y="1" width="15" height="393"/>
+                            <rect key="frame" x="166" y="1" width="16" height="393"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                     </scrollView>
@@ -835,7 +835,7 @@
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                         <scroller key="verticalScroller" verticalHuggingPriority="750" horizontal="NO" id="5Yx-ol-a3t">
-                            <rect key="frame" x="529" y="1" width="15" height="94"/>
+                            <rect key="frame" x="528" y="1" width="16" height="94"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                     </scrollView>
@@ -843,6 +843,9 @@
                         <rect key="frame" x="339" y="246" width="187" height="242"/>
                         <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="green" id="edy-vA-rtq"/>
                     </imageView>
+                    <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="f4q-rA-fbF" customClass="premattview">
+                        <rect key="frame" x="576" y="423" width="163" height="96"/>
+                    </customView>
                 </subviews>
             </view>
         </window>
